<?xml version="1.0"?>
<!-- 
  文件: package.xml
  作者: Guo
  日期: 2023-10-26
  功能: 定义ROS包 send_goals 的元数据和依赖项。
        该文件描述了包的名称、版本、维护者、许可证、构建工具依赖、构建依赖、
        导出依赖和执行依赖等信息。
-->
<package format="2">
  <name>send_goals</name>
  <version>0.0.0</version>
  <description>该ROS包用于发送导航目标点，并包含与相机相关的TF变换节点。</description>

  <!-- 维护者标签：一个必需，多个允许，每人一个标签 -->
  <!-- 示例： -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="guo@todo.todo">guo</maintainer>


  <!-- 许可证标签：一个必需，多个允许，每种许可证一个标签 -->
  <!-- 常用的许可证字符串： -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- URL 标签：可选，但允许有多个，每个标签一个URL -->
  <!-- 可选属性 type 可以是：website（网站）、bugtracker（错误跟踪）或 repository（代码库） -->
  <!-- 示例： -->
  <!-- <url type="website">http://wiki.ros.org/send_goals</url> -->


  <!-- 作者标签：可选，允许有多个，每个标签一个作者 -->
  <!-- 作者不必是维护者，但可以是 -->
  <!-- 示例： -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- *depend 标签用于指定依赖项 -->
  <!-- 依赖项可以是 catkin 包或系统依赖项 -->
  <!-- 示例： -->
  <!-- 使用 depend 作为同时是构建和执行依赖项的包的快捷方式 -->
  <!--   <depend>roscpp</depend> -->
  <!--   请注意，这等同于以下内容： -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- build_depend 用于编译时需要的包： -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- build_export_depend 用于构建此包时需要的包： -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- buildtool_depend 用于构建工具包： -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- exec_depend 用于运行时需要的包： -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- test_depend 用于仅用于测试的包： -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- doc_depend 用于仅用于构建文档的包： -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <!-- 构建工具依赖：catkin 是 ROS 的构建系统 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 构建依赖：编译此包所需的其他 ROS 包 -->
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- 构建导出依赖：当其他包依赖此包时，它们也需要这些依赖 -->
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <!-- 执行依赖：运行时此包所需的其他 ROS 包 -->
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- export 标签包含其他未指定的标签 -->
  <export>
    <!-- 其他工具可以在此处请求放置额外信息 -->

  </export>
</package>
