<?xml version="1.0"?>
<!--
  package.xml

  @brief ROS 包 `ucar_camera` 的清单文件。

  该文件定义了 ROS 包的元数据，包括名称、版本、描述、维护者、许可证以及构建和运行时依赖项。
  它是 ROS 包管理的核心组成部分。
-->
<package format="2">
  <!-- 包的名称，必须是唯一的，并且符合 ROS 的命名约定 -->
  <name>ucar_camera</name>
  <!-- 包的版本号，遵循语义化版本控制规范 -->
  <version>0.0.0</version>
  <!-- 包的简短描述，通常用于说明包的功能 -->
  <description>The ucar_camera package</description>

  <!-- 维护者标签：至少需要一个，可以有多个，每个人一个标签 -->
  <!-- 示例： -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jwliang@iflytek.com">iflytek</maintainer>


  <!-- 许可证标签：至少需要一个，可以有多个，每个许可证一个标签 -->
  <!-- 常用的许可证字符串： -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- URL 标签是可选的，但可以有多个，每个标签一个 URL -->
  <!-- 可选属性 type 可以是：website, bugtracker, 或 repository -->
  <!-- 示例： -->
  <!-- <url type="website">http://wiki.ros.org/ucar_nav</url> -->


  <!-- 作者标签是可选的，可以有多个，每个人一个标签 -->
  <!-- 作者不必是维护者，但可以是 -->
  <!-- 示例： -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- *depend 标签用于指定依赖项 -->
  <!-- 依赖项可以是 Catkin 包或系统依赖项 -->
  <!-- 示例： -->
  <!-- depend：作为同时是构建和执行依赖项的包的快捷方式 -->
  <!--   <depend>roscpp</depend> -->
  <!--   请注意，这等同于以下内容： -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- build_depend：编译时需要的包 -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- build_export_depend：构建此包时需要导出的包 -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- buildtool_depend：构建工具包 -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- exec_depend：运行时需要的包 -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- test_depend：仅用于测试的包 -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- doc_depend：仅用于构建文档的包 -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- export 标签包含其他未指定的标签 -->
  <export>
    <!-- 其他工具可以在此处请求放置额外信息 -->

  </export>
</package>
