<?xml version="1.0"?>
<!-- package.xml是ROS包的清单文件，定义了包的元数据、依赖项和构建信息。 -->
<package format="2">
  <!-- 包的名称 -->
  <name>ucar_controller</name>
  <!-- 包的版本号 -->
  <version>1.1.0</version>
  <!-- 包的简要描述 -->
  <description>The ucar_controller package</description>

  <!-- 维护者信息：至少需要一个，可以有多个 -->
  <maintainer email="jwliang@iflytek.com">iflytek</maintainer>


  <!-- 许可证信息：至少需要一个，可以有多个 -->
  <!-- 常用的许可证字符串包括：BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- URL标签：可选，可以有多个 -->
  <!-- type属性可以是：website, bugtracker, 或 repository -->
  <!-- 示例：<url type="website">http://wiki.ros.org/ucar_controller</url> -->


  <!-- 作者信息：可选，可以有多个 -->
  <!-- 作者不一定是维护者 -->
  <!-- 示例：<author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- 依赖标签：用于指定Catkin包或系统依赖 -->
  <!-- 示例： -->
  <!-- depend：同时作为构建和执行依赖的快捷方式 -->
  <!--   <depend>roscpp</depend> -->
  <!--   等同于： -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- build_depend：编译时需要的包 -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- build_export_depend：构建此包时，其他包需要依赖的包 -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- buildtool_depend：构建工具包 -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- exec_depend：运行时需要的包 -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- test_depend：仅用于测试的包 -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- doc_depend：仅用于构建文档的包 -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  
  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  
  <!-- 构建依赖 -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  
  <!-- 构建导出依赖 -->
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <!-- 执行依赖 -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>


  <!-- export标签包含其他未指定的标签 -->
  <export>
    <!-- 其他工具可以在此处请求添加额外信息 -->

  </export>
  <!-- 消息生成相关的依赖 -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
